Deactivate the plugin by default (for integration in CC)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 ﻿cmake_minimum_required(VERSION 3.18)
 
-option( PLUGIN_STANDARD_QVOXFALL "Install qVoxFall plugin" ON )
+option( PLUGIN_STANDARD_QVOXFALL "Install qVoxFall plugin" OFF )
 
 if ( PLUGIN_STANDARD_QVOXFALL )
 	project( QVOXFALL_PLUGIN)
